--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
+/bin/*
 /bin/
+bin
 /objects/
-/main.c
+/objects/*
+objects
+/DOCS/html
+/DOCS/html/*
+/DOCS/latex
+/DOCS/latex/*
+
+.settings/*
+.settings
 .project
 .cproject
+
+/src/main.c
+
+main
+*.so
+*.dll
+*.dll.a
+*.dylib
